Set preferences for highest performance